--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -271,8 +271,16 @@ h1 {
 }
 
 #marketplaceItems {
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 20px;
+  width: 1000px;
+}
+
+#marketAlign {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
