Added withdraw item and buy buttons

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -276,3 +276,11 @@ h1 {
   justify-content: center;
   gap: 20px;
 }
+
+.btnWider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  width: 120px;
+}
