--- a/views/marketplace/browse-offers.ejs
+++ b/views/marketplace/browse-offers.ejs
@@ -8,7 +8,6 @@
         <ul class="removeListStyle">
             <!-- <li id="equipment">Equipment</li> -->
             <ul class="removeListStyle allignList">
-                <li><img class="itemImage" src="../<%=item.item.image%>" width="130px"></li>
                 <div class="weaponStats">           
                 <li><%=item.item.name%></li>                         
                     <div class="inlineStats">   
@@ -16,11 +15,19 @@
                         <li>👻 <%=item.price%></li>
                     </div>
                 </div> 
+                <li><img class="itemImage" src="../<%=item.item.image%>" width="130px"></li>
             </ul>
+            <% if (JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) {%>
+                <form action="/marketplace/remove-offer">
+                    <button class="buttonItem btnWider" type="submit">Withdraw offer</button>
+                </form>
+                <div style="color: green;">Your Offer</div>
+            <% } else { %>
+                <form action="/marketplace/remove-offer">
+                    <button class="buttonItem btnWider" type="submit">Buy item</button>
+                </form>
+            <% }  %>
         </ul>
-        <% if (JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) {%>
-            <div style="color: green";>Your Offer</div>
-        <% } %>
     </div> 
 <% }) %>
 </div>
