Possibility to remove offers from marketplace

--- a/views/marketplace/browse-offers.ejs
+++ b/views/marketplace/browse-offers.ejs
@@ -1,6 +1,7 @@
 <%- include("../../partials/nav-bar.ejs") %>
 
 <h1>Browse offers</h1>
+<div>Total: <%=item.length%></div>
 
 <div id="marketAlign">
     <div id="marketplaceItems">
@@ -19,12 +20,12 @@
                     <li><img class="itemImage" src="../<%=item.item.image%>" width="130px"></li>
                 </ul>
                 <% if (JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) {%>
-                    <form action="/marketplace/remove-offer">
+                    <form action="/marketplace/remove-offer/<%=item._id%>/<%=item.item._id%>" method="POST">
                         <button class="buttonItem btnWider" type="submit">Withdraw offer</button>
                     </form>
                     <div style="color: green;">Your Offer</div>
                 <% } else { %>
-                    <form action="/marketplace/remove-offer">
+                    <form action="/marketplace/buy-item/<%=item._id%>/<%=item.item._id%>" method="POST">
                         <button class="buttonItem btnWider" type="submit">Buy item</button>
                     </form>
                 <% }  %>
@@ -32,4 +33,7 @@
         </div> 
     <% }) %>
     </div>
+    <% if (errorMessage !== "") { %>
+        <div class="display-error-message centralize"><%=errorMessage%></div>
+    <% } %>
 </div>
