Functionality to purchase items on marketplace

--- a/views/marketplace/browse-offers.ejs
+++ b/views/marketplace/browse-offers.ejs
@@ -17,7 +17,7 @@
                             <li>👻 <%=item.price%></li>
                         </div>
                     </div> 
-                    <li><img class="itemImage" src="../<%=item.item.image%>" width="130px"></li>
+                    <li><img class="itemImage" src="../../<%=item.item.image%>" width="130px"></li>
                 </ul>
                 <% if (JSON.stringify(item.owner._id) === `"${sessionRace[0].charId}"`) {%>
                     <form action="/marketplace/remove-offer/<%=item._id%>/<%=item.item._id%>" method="POST">
@@ -25,7 +25,7 @@
                     </form>
                     <div style="color: green;">Your Offer</div>
                 <% } else { %>
-                    <form action="/marketplace/buy-item/<%=item._id%>/<%=item.item._id%>" method="POST">
+                    <form action="/marketplace/buy-item/<%=item._id%>/<%=item.item._id%>/<%=item.owner._id%>" method="POST">
                         <button class="buttonItem btnWider" type="submit">Buy item</button>
                     </form>
                 <% }  %>
@@ -33,7 +33,7 @@
         </div> 
     <% }) %>
     </div>
-    <% if (errorMessage !== "") { %>
-        <div class="display-error-message centralize"><%=errorMessage%></div>
-    <% } %>
 </div>
+<% if (errorMessage !== "") { %>
+    <div class="display-error-message centralize"><%=errorMessage%></div>
+<% } %>
