--- a/views/marketplace/select-offer.ejs
+++ b/views/marketplace/select-offer.ejs
@@ -2,5 +2,12 @@
 
 <h1>Marketplace</h1>
 
-<h1>Create an offer</h1>
+<h1 class="centerText">Create an offer</h1>
+<form action="/marketplace", method="GET">
+    <button class="buttonItem btnWider" type="submit">Back</button>
+</form>
+<div id="marketAlign">
+    <div id="marketplaceItems">
 <%- include("../../partials/inventory-display.ejs") %>
+    </div>
+</div>
