--- a/views/auth/signup-login.ejs
+++ b/views/auth/signup-login.ejs
@@ -1,5 +1,7 @@
-<%- include("../../partials/nav-bar.ejs") %>
-<section>
+<section id="firstScreenPad">
+  <iframe class="backgroundFrame"  src="https://my.spline.design/untitled-deab33bcbc864260051c7119d9485f01/"></iframe> 
+  <%- include("../../partials/nav-bar.ejs") %>
+  
     <form method="POST" action="/auth/accountcheck">      
   
       <label for="">
@@ -15,3 +17,5 @@
   <% } %>
   
   </section>
+
+   <img src="../images/fadeBackground.png" id="loginScreen" >
