--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,11 +1,12 @@
 <%- include("../../partials/nav-bar.ejs") %>
-<h2>Login</h2>
 
-<section>
-    <form action="/auth/login" method="POST">
-        <label>Username: <input type="text" name="username" value="<%=username%>"></label>
-        <label>Password: <input type="password" name="password" autofocus></label>
-        <button type="submit">Log In</button>
+
+<section class="alignLogin loginTitle">
+    <h2 class="loginTitle">Login</h2>
+    <form class="alignLogin itemTable loginTable" action="/auth/login" method="POST">
+        <label class="alignLogin usernameLogin">Username<input class="cleanInput" type="text" name="username" value="<%=username%>"></label>
+        <label class="alignLogin usernameLogin">Password<input class="cleanInput" type="password" name="password" autofocus></label>
+        <button class="buttonItem widerButton" type="submit">Log In</button>
         <div>
             <a href="#"" id="forgotPassword">Forgot your password?</a>
         </div>
