--- a/partials/inventory-display.ejs
+++ b/partials/inventory-display.ejs
@@ -1,8 +1,7 @@
 <div id="inventoryArray">
     <% character.inventory.forEach((item) => { %>
     <div class="invItem">
-        <div><img class="invItemImage" src="../<%=item.image%>"></div> 
-
+        <div><img class="invItemImage" src="../../<%=item.image%>"></div> 
         <div><%=item.name%></div>   
         
         <div class="invStats">
